# unraid-mcp

./: .app.json  .dockerignore  .env.example  .env.template  .gitattributes  .gitignore  .gitleaks.toml  .mcp.json  .mise.toml  .plan.md  .pre-commit-config.yaml  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  Justfile  MANIFEST.md  MARKETPLACE.md  MISSING_API_FEATURES.md  PUBLISHING.md  README.md  UNRAIDAPI.md  build.rs  client_summary.md  config.example.toml  config.toml  dev.sh  docker-compose.prod.yml  docker-compose.yaml  docker-compose.yml  entrypoint.sh  example_usage.py  fastmcp.http.json  fastmcp.stdio.json  gemini-extension.json  incus.plg  install.sh  introspection-query.json  (+16 more)
.agents/plugins/: marketplace.json
.beads/: metadata.json
.cargo/: config.toml
.claude-plugin/: README.md  install-deps.sh  marketplace.json  plugin.json
.codex-plugin/: plugin.json
.github/: CODEOWNERS  actionlint.yaml  dependabot.yml
.github/workflows/: api-plugin-ci.yml  build-unraid-plugin.yml  ci.yml  claude-code-review.yml  claude-schema-drift.yml  claude.yml  codex-ci.yml  codex-plugin-scanner.yml  codex-release.yml  docker-publish.yml  incus-api-ci.yml  incus-classic-ci.yml  incus-release.yml  meta-ci.yml  no-large-blobs.yml  openwiki-update.yml  publish-pypi.yml  release-liveness.yml  release-please.yml  release.yml  rust-ci.yml  rust-release.yml  rust-schema-drift.yml  schema-drift.yml  secret-scan.yml  sync-marketplace-no-mcp.yml
.lavra/config/: codebase-profile.md  project-setup.md
.lavra/memory/: knowledge.jsonl
.omc/: project-memory.json
.omc/sessions/: 19d5c7f6-50e2-4346-a71f-973eb10fdcf3.json  f092133d-0b5d-4d09-af8b-48eb39fc6501.json
.omc/state/: hud-state.json  hud-stdin-cache.json  mission-state.json
_import/incus-unraid/: .gitattributes  LICENSE  README.md  incus.plg  release-manifest.json
agents/unraid-py/: .mcp.json
agents/unraid-rs/: .mcp.json
cline_docs/: activeContext.md  productContext.md  progress.md  systemPatterns.md  techContext.md
commands/: array.md  docker.md  health.md  info.md  keys.md  notifications.md  rclone.md  settings.md  storage.md  users.md  vm.md
config/: Dockerfile  mcporter.json
deploy/: README.md
deploy/apparmor/: usr.sbin.rsyslogd.syslog-mcp
deploy/otel/: claude-code-settings.example.json  codex-config.example.toml
deploy/rsyslog/: 10-imjournal.conf  11-imfile.conf  30-swag.conf  35-authelia.conf  36-adguard.conf  40-ai-transcripts.conf
docs/: AUTHENTICATION.md  CHECKLIST.md  CONFIG.md  DESTRUCTIVE_ACTIONS.md  GOOGLE_OAUTH.md  GUARDRAILS.md  INVENTORY.md  MARKETPLACE.md  PUBLISHING.md  QUICKSTART.md  README.md  ROLLBACK.md  RUST.md  SETUP.md  UNRAID_API_COMPLETE_REFERENCE.md  UNRAID_API_OPERATIONS.md  UNRAID_API_REFERENCE.md  test-actions.md  unraid-api-introspection.json  unraid-api-summary.md  unraid-schema.graphql  unraid.subdomain.conf
docs/mcp/: AUTH.md  CICD.md  CLAUDE.md  CONNECT.md  DEPLOY.md  DEV.md  ELICITATION.md  ENV.md  LOGS.md  MCPORTER.md  MCPUI.md  PATTERNS.md  PRE-COMMIT.md  PUBLISH.md  RESOURCES.md  SCHEMA.md  TESTS.md  TOOLS.md  TRANSPORT.md
docs/plugin/: AGENTS.md  CHANNELS.md  CLAUDE.md  CONFIG.md  HOOKS.md  MARKETPLACES.md  PLUGINS.md  SCHEDULES.md  SKILLS.md
docs/repo/: CLAUDE.md  MEMORY.md  RECIPES.md  REPO.md  RULES.md  SCRIPTS.md
docs/research/: competitive-analysis.md  feature-gap-analysis.md  unraid-api-crawl.md  unraid-api-exa-research.md  unraid-api-research.md  unraid-api-source-analysis.md
docs/sessions/: 2026-04-05-unraid-api-doc-consolidation-and-mutation-validation.md  2026-06-19-issue-pr-triage-and-output-audit.md  2026-06-19-remove-elicitation-config.md  2026-06-20-zero-loss-main-cleanup.md  2026-06-23-unraid-mcp-release-cleanup.md  (+9 more)
examples/: mock_unraid.rs
hooks/: CLAUDE.md  hooks.json
openwiki/: .last-update.json  api-reference.md  architecture.md  configuration.md  development.md  quickstart.md
plugins/: incus.xml
schema/: live-introspection-diff.md  live-introspection.json  unraid-schema.graphql
scripts/: CLAUDE.md  backup.sh  build-classic-package.sh  bump-version.sh  check-runtime-current.sh  check-version-sync.sh  dev.sh  ensure-ignore-files.sh  generate_unraid_api_reference.py  install.sh  lint-plugin.sh  list_graphql_operations.py  live-schema-contract.py  plugin-setup.sh  readiness_mock.py  refresh-docs.sh  report_api_parity.py  reset-db.sh  smoke-stdio.sh  smoke-test.sh  test-check-runtime-current.sh  test-tools.sh  validate-marketplace.sh  validate-plugin-layout.sh  validate-schema-agent-paths.sh  verify-classic-package.sh
src/: app.rs  cli.rs  config.py  config.rs  gql_typed.rs  graphql.rs  lib.rs  main.rs  mcp.rs  observability.rs  server.py  token_limit.rs
tests/: README.md  TEST_COVERAGE.md  auth_modes.rs  classic-contract.sh  cli_help.rs  conftest.py  cynic_spike.rs  dispatch.rs  host_filter.rs  live-isolation.sh  live_schema_contract.rs  oauth_flow.rs  package-directory-modes.sh  paginate.rs  real_binary.rs  scenarios.rs  schema_contract.rs  setup_contract.rs  spike_rmcp_extensions.rs  stdio_mcp.rs  test_api_key_auth.py  test_array.py  test_auth.py  test_auth_builder.py  test_auth_settings.py  test_bump_version.bats  test_client.py  test_concurrency.py  test_connect.py  test_customization.py  test_dispatch_registry.py  test_dispatcher_contract.py  test_docker.py  test_docs_match_code.py  test_elicitation.py  test_env_loading.py  test_generate_unraid_api_reference.py  test_google_auth.py  test_guards.py  test_health.py  (+33 more)
unraid/: README.md
unraid-api-plugin-incus/: index.ts  package-lock.json  package.json  stryker.config.mjs  vitest.config.ts
unraid-codex/: .gitignore  unraid-codex.plg
unraid-plugin/: .gitignore  README.md  unraid-mcp.plg
unraid-py/: .dockerignore  .env.example  CHANGELOG.md  CLAUDE.md  Justfile  LICENSE  README.md  gemini-extension.json  server.json
unraid-rs/: .dockerignore  .env.example  .gitattributes  .gitignore  Justfile  docker-compose.prod.yml  release-please-config.json  taplo.toml
unraid_mcp/: __init__.py  main.py  server.py  version.py
(+795 files in other folders)
