[workspace]
members = [".", "xtask"]
default-members = ["."]
resolver = "2"

[package]
name = "unraid-mcp"
version = "0.1.1"
edition = "2021"
rust-version = "1.90"
description = "Unraid MCP server — GraphQL API bridge"
autobins = false

[[bin]]
name = "runraid"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }

# HTTP / MCP transport
axum = "0.8"
rmcp = { version = "1.6.0", default-features = false, features = [
  "server",
  "macros",
  "transport-streamable-http-server",
  "transport-io",
] }
tower-http = { version = "0.6", features = ["cors", "limit", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Config
toml = "0.8"

# OAuth + JWT
lab-auth = { git = "https://github.com/jmagar/lab.git", rev = "87cec3241f9baef22335de9cc8629ebbcd8ba047", package = "lab-auth" }
url = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

# GraphQL HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Errors
anyhow = "1"
thiserror = "2"
dotenvy = "0.15.7"

[features]
test-support = []

[dev-dependencies]
unraid-mcp = { path = ".", features = ["test-support"] }
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
rmcp = { version = "1.6.0", default-features = false, features = [
  "client",
  "transport-child-process",
] }
wiremock = "0.6"
