# ============================================================================
# Build System Configuration
# ============================================================================
[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

# ============================================================================
# Project Metadata
# ============================================================================
[project]
name = "unraid-mcp"
version = "2.3.3"
description = "MCP Server for Unraid API - provides tools to interact with an Unraid server's GraphQL API"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.12"
authors = [
    {name = "jmagar", email = "jmagar@users.noreply.github.com"}
]
maintainers = [
    {name = "jmagar", email = "jmagar@users.noreply.github.com"}
]
keywords = [
    "unraid",
    "mcp",
    "model-context-protocol",
    "graphql",
    "api",
    "server",
    "docker",
    "automation",
    "monitoring",
    "homelab",
]
classifiers = [
    # Development Status
    "Development Status :: 4 - Beta",

    # Audience
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",

    # License
    "License :: OSI Approved :: MIT License",

    # Python Versions
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",

    # Framework
    "Framework :: FastAPI",
    "Framework :: Pydantic",

    # Topics
    "Topic :: Home Automation",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
    "Topic :: Software Development :: Libraries :: Python Modules",

    # Environment
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Typing :: Typed",
]

# ============================================================================
# Dependencies
# ============================================================================
dependencies = [
    "python-dotenv>=1.1.1",
    # Upper-bounds on the two churn-prone deps: fastmcp and websockets have both
    # shipped breaking changes across majors, and the WS layer is version-sensitive.
    # Caps prevent `uv lock` from silently jumping a major (uv.lock pins the exact
    # resolved version within the range).
    "fastmcp>=3.0.0,<4.0.0",
    "httpx>=0.28.1",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.35.0",
    "websockets>=15.0.1,<17.0.0",
    "rich>=14.1.0",
    "pydantic-settings>=2.0",
    # Runtime dependency for AST-based validation of the raw GraphQL subscription
    # string accepted by `subscriptions/test_query` — the allowlist is enforced on
    # the parsed operation (every top-level field), not a regex. (Was dev-only.)
    "graphql-core>=3.2.0",
    # Optional Google OAuth (core/google_auth.py) imports these directly. Both ship
    # transitively with fastmcp today, but the OAuth code uses them at the top level
    # (Fernet token encryption + FileTreeStore disk persistence), so pin them as
    # explicit deps rather than relying on a transitive resolution.
    "cryptography>=44.0.0",
    "py-key-value-aio>=0.4.0",
]

# ============================================================================
# Project URLs
# ============================================================================
[project.urls]
Homepage = "https://github.com/jmagar/unraid-mcp"
Documentation = "https://github.com/jmagar/unraid-mcp#readme"
Repository = "https://github.com/jmagar/unraid-mcp"
Issues = "https://github.com/jmagar/unraid-mcp/issues"
Changelog = "https://github.com/jmagar/unraid-mcp/releases"
Source = "https://github.com/jmagar/unraid-mcp"

# ============================================================================
# Entry Points
# ============================================================================
[project.scripts]
unraid-mcp-server = "unraid_mcp.main:main"
unraid-mcp = "unraid_mcp.main:main"

# ============================================================================
# Build Configuration
# ============================================================================
[tool.hatch.build.targets.wheel]
only-include = ["unraid_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "/unraid_mcp",
    "/tests",
    "/plugins",
    "/scripts",
    "/README.md",
    "/LICENSE",
    "/CLAUDE.md",
    "/AGENTS.md",
    "/GEMINI.md",
    "/pyproject.toml",
    "/.env.example",
]
exclude = [
    "/.git",
    "/.github",
    "/.venv",
    "/.cache",
    "/.docs",
    "/.full-review",
    "/docs",
    "/dist",
    "/logs",
    "*.pyc",
    "__pycache__",
]

# ============================================================================
# Tool Configuration: Ruff (Linting & Formatting)
# ============================================================================
[tool.ruff]
target-version = "py312"
line-length = 100
cache-dir = ".cache/.ruff_cache"

[tool.ruff.lint]
select = [
    # Pyflakes
    "F",
    # pycodestyle
    "E",
    "W",
    # isort
    "I",
    # pep8-naming
    "N",
    # pydocstyle
    "D",
    # pyupgrade
    "UP",
    # flake8-2020
    "YTT",
    # flake8-bugbear
    "B",
    # flake8-quotes
    "Q",
    # flake8-comprehensions
    "C4",
    # flake8-simplify
    "SIM",
    # flake8-type-checking
    "TCH",
    # flake8-use-pathlib
    "PTH",
    # flake8-async
    "ASYNC",
    # flake8-return
    "RET",
    # Perflint
    "PERF",
    # Ruff-specific rules
    "RUF",
    # flake8-bandit (security)
    "S",
]
ignore = [
    "E501",   # line too long (handled by ruff formatter)
    "B008",   # function calls in argument defaults
    "C901",   # too complex
    "D100",   # missing docstring in public module
    "D101",   # missing docstring in public class
    "D102",   # missing docstring in public method
    "D103",   # missing docstring in public function
    "D104",   # missing docstring in public package
    "D105",   # missing docstring in magic method
    "D107",   # missing docstring in __init__
    "D203",   # 1 blank line required before class docstring (conflicts with D211)
    "D213",   # multi-line docstring summary should start at the second line (conflicts with D212)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "D104"]
"tests/**/*.py" = ["D", "S101", "S105", "S106", "S107", "S603", "S607", "PLR2004", "N815"]  # Allow test-only patterns; S603/S607 permit subprocess-driven shell tests; N815 permits camelCase Pydantic fields that mirror GraphQL response keys
"tests/test_docker.py" = ["D", "S101", "S104", "S105", "S106", "S107", "PLR2004", "N815"]  # docker port mock fixtures use literal "0.0.0.0"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["unraid_mcp"]
force-single-line = false
lines-after-imports = 2

# ============================================================================
# Tool Configuration: ty (Type Checking)
# ============================================================================
[tool.ty.environment]
python-version = "3.12"

[tool.ty.analysis]
respect-type-ignore-comments = true

# ============================================================================
# Tool Configuration: pytest (Testing)
# ============================================================================
[tool.pytest.ini_options]
asyncio_mode = "auto"
cache_dir = ".cache/.pytest_cache"
# Put the repo root on sys.path so tests can import the top-level `scripts`
# package (a namespace package with no __init__.py), e.g.
# tests/test_generate_unraid_api_reference.py.
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "-v",
]
markers = [
    # NOTE: `slow` is currently applied to zero tests, so the CI `-m "not slow"`
    # filter is presently inert. It is kept registered (rather than removed) so
    # that filter continues to resolve under --strict-config/--strict-markers and
    # so future slow tests can adopt it without re-registration.
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "mockserver: round trips against the local mock GraphQL server (tests/mock; needs `npm --prefix tests/mock install`)",
    "live: marks tests that run against a live, running server (Justfile `test-live` uses `-m live`)",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# ============================================================================
# Tool Configuration: Coverage
# ============================================================================
[tool.coverage.run]
source = ["unraid_mcp"]
branch = true
# `parallel` is intentionally OFF: CI runs a single pytest process, so per-process
# `.coverage.<suffix>` files (which need an explicit `coverage combine`) would only
# add a silent-empty-report failure mode. Re-enable ONLY alongside a `coverage
# combine` step if the suite is ever split (e.g. pytest-xdist `-n auto`).
parallel = false
data_file = ".cache/.coverage"
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.venv/*",
]

[tool.coverage.report]
fail_under = 70
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if False:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "@(typing\\.)?overload",
]

[tool.coverage.html]
directory = ".cache/htmlcov"

[tool.coverage.xml]
output = ".cache/coverage.xml"

# ============================================================================
# Tool Configuration: Dependency Groups (uv-specific)
# ============================================================================
[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "respx>=0.22.0",
    # Pinned exactly: ty is pre-1.0 (0.0.x) and is CI's sole type-check authority,
    # so a point release can break CI on unchanged code. Bump deliberately (Dependabot).
    "ty==0.0.57",
    "ruff>=0.12.8",
    "build>=1.2.2",
    "twine>=6.0.1",
    "hypothesis>=6.151.9",
]
